<resources>
    <string name="app_name">客运司机</string>
    <string name="setting">设置</string>
    <string name="chake_updata">检查版本更新</string>
    <string name="about">关于软件</string>
    <string name="cancell">注销</string>
    <string name="login">登录</string>
    <string name="forget_passwrod">忘记密码？</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="personal_center">个人中心</string>
    <string name="scan">扫描</string>
    <string name="data_uploading">数据上传</string>
    <string name="syn">同步</string>
    <string name="inventory">盘点</string>
    <string name="inventory_updata">盘点上传</string>
    <string name="inventory_change">盘点数据修改</string>
    <string name="inventory_number">实盘数:</string>
    <string name="inventory_details">盘点详情</string>
    <string name="scanoption">扫描选项</string>
    <string name="bycarinout">按车出入</string>
    <string name="bylistout">按单发货</string>
    <string name="shop">采购</string>
    <string name="gotogo">调拨</string>
    <string name="freescan">自由扫</string>
    <string name="sys_stores">仓库数据正在加载中，请稍后...</string>
    <string name="sys_stkcksum">盘点数据正在加载中，请稍后...</string>
    <string name="sys_barcode">标准表数据正在加载中，请稍后...</string>
    <string name="sys_newBarcode">新标准表数据正在加载中，请稍后...</string>
    <string name="sys_shiplist">发货清单数据正在加载中，请稍后...</string>
    <string name="sys_log">日志正在上传中，请稍后...</string>
    <string name="sys_log_success">日志成功</string>
    <string name="sys_log_fail">日志失败</string>
    <string name="goods_number">发货编号</string>
    <string name="input_goods_number">请输入物品编号</string>
    <string name="scan_type">扫描类别：</string>
    <string name="in">入</string>
    <string name="out">出</string>
    <string name="select_store">仓库选择：</string>
    <string name="scan_ones">扫一次保存一次</string>
    <string name="search">搜索</string>
    <string name="input_search">请输入产品编号进行搜索</string>
    <string name="achat">采购单</string>
    <string name="achat_details">采购单详情</string>
    <string name="about_context">本软件有报错或者改进请联系我\n联系电话：18221426017</string>
    <string name="billno">订单编号</string>
    <string name="billno_details">订单详情</string>
    <string name="billno_1">订单编号:</string>
    <string name="goodsno">产品编号</string>
    <string name="goodsno_1">产品编号:</string>
    <string name="goodsname">机器名称</string>
    <string name="goodsname_1">机器名称:</string>
    <string name="total">总台数</string>
    <string name="total_1">总台数:</string>
    <string name="surplus">还剩台数</string>
    <string name="surplus_1">还剩台数:</string>
    <string name="stand">台</string>
    <string name="in_number">内机数量</string>
    <string name="in_number_1">内机数量:</string>
    <string name="out_number">外机数量</string>
    <string name="out_number_1">外机数量:</string>
    <string name="barcode">条码</string>
    <string name="barcode_1">条码:</string>
    <string name="time">时间</string>
    <string name="updata_scan">条码上传</string>
    <string name="goodsid">产品id</string>
    <string name="goodsid_1">产品id:</string>
    <string name="isorin">是否为内机</string>
    <string name="isorin_1">是否为内机:</string>
    <string name="modify">修改</string>
    <string name="modify_details">修改详情</string>
    <string name="by_car">按车发货</string>
    <string name="by_car_details">按车发货详情</string>
    <string name="by_car_details_context">按车发货详情内容</string>
    <string name="by_list">按单发送</string>
    <string name="by_list_details">按单发送详情</string>
    <string name="no_finish">未完场</string>
    <string name="finish">已完成</string>
    <string name="dispatch">调拨单</string>
    <string name="dispatch_details">调拨单详情</string>
    <string name="address">详细地址</string>
    <string name="address_1">详细地址:</string>
    <string name="express_scan">快递扫描</string>
    <string name="express_hint">温馨提示：请扫描快递单号</string>
    <string name="store_number">库存个数：</string>
    <string name="input_number">请输入个数</string>
    <string name="input_barcode">请输入条形码</string>
    <string name="save">保存</string>
    <string name="same">一致</string>
    <string name="phone">联系电话</string>
    <string name="phone_1">联系电话:</string>
    <string name="finish_1">完成</string>
    <string name="server_address">服务器地址</string>
    <string name="input_server_address">请输入服务器地址</string>
    <string name="start_scan">启用扫描枪</string>
    <string name="log_updata">日志上传</string>
    <string name="data_reset">数据重置</string>
    <string name="test">测试</string>
    <string name="clean">一键加速</string>

</resources>
