<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/freescan"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <LinearLayout
            android:id="@+id/freescan_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@mipmap/fh2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goods_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dip"/>
    <EditText
        android:id="@+id/freescan_et_billno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/input_goods_number"
        android:layout_marginTop="10dip"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_type"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20sp"/>

        <CheckBox
            android:id="@+id/freescan_cb_billtype_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/freescan_cb_billtype_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in"
            android:textSize="20sp"
            android:layout_marginLeft="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_store"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginLeft="20sp"/>
        <Spinner
            android:id="@+id/freescan_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/freescan_bt_scan_once"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_ones"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_rounded_rectangle"/>

</LinearLayout>
