<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/billno"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/barcode"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/mediumblue"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>


