<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/dispatch"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/dispatch_layout_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@mipmap/fh2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/dispatch_et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_search"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <ListView
        android:id="@+id/dispatch_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>