<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/modify_details"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <LinearLayout
            android:id="@+id/delete_scanlist_details_layout_back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@mipmap/fh2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/billno_1"
            android:gravity="right"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/delete_scanlist_details_billno_ed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/goodsid_1"
            android:gravity="right"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/delete_scanlist_details_goodid_ed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/barcode_1"
            android:gravity="right"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/delete_scanlist_details_barcodes_ed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/isorin_1"
            android:gravity="right"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/delete_scanlist_details_isin_ed"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/delete_scanlist_details_updata_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modify"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/shape_rounded_rectangle"/>

</LinearLayout>